fix: Alinha nomes de métodos do DAO com a lógica do Helper.
- Renomeado 'buscarPDIsRH()' para 'listarTodosPDI()' no DashboardDAO.
- Adicionado 'listarPDIColaborador(id)' no DashboardDAO para o filtro de Colaborador.
- Corrigida a lógica de mapeamento de acesso no DashboardGUIControllerHelper.
- Resolvido o erro de organização de arquivos do DashboardGUIControllerHelper.